feat: add multi-page structure with semantics, nav and anchors

--- a/contacts.html
+++ b/contacts.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Название вашего сайта</title>
-    <meta name="description" content="Краткое описание главной страницы вашего сайта">
+    <title>Контакты</title>
+    <meta name="description" content="Контакты">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -24,7 +24,7 @@
         <!-- Простые "хлебные крошки" -->
         <nav aria-label="Хлебные крошки">
             <a href="index.html">Главная</a> →
-            <span>О нас</span>
+            <span>Контакты</span>
         </nav>
 
         <h1>О нашей компании</h1>
@@ -39,9 +39,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
+        <p>&copy; 2023 Название сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
-    </footer>пируйте весь блок <footer> из index.html -->
     </footer>
 </body>
 </html>
