--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Название </title>
+    <title>Главная </title>
     <meta name="description" content="Краткое описание главной страницы сайта">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
@@ -48,7 +48,7 @@
     
     <!-- Подвал сайта -->
     <footer>
-        <p>&copy; 2025 Название сайта. Все права защищены.</p>
+        <p>&copy; 2023 Название сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
