fixes in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -27,19 +27,19 @@
             <span>Контакты</span>
         </nav>
 
-        <h1>О нашей компании</h1>
+        <h1>Способы связи</h1>
         <section>
-            <h2>Наша история</h2>
-            <p>Текст о том, как все начиналось...</p>
+            <h2>Электронная почта</h2>
+            <p>Здесь будет находится адрес электронной почты</p>
         </section>
         <section>
-            <h2>Наша команда</h2>
-            <p>Текст о команде...</p>
+            <h2>Номер телефона</h2>
+            <p>Здесь будет находиться номер телефона</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Название сайта. Все права защищены.</p>
+        <p>&copy; 2025 Название сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
