--- a/about.html
+++ b/about.html
@@ -3,44 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная - Название сайта</title>
-    <meta name="description" content="Краткое описание главной страницы сайта">
+    <title>О нас - Название вашего сайта</title>
+    <meta name="description" content="Узнайте больше о нашей компании и истории">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <a href="/">Логотип или название сайта</a>
-        <!-- Главное меню навигации -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+    <header class="site-header">
+        <a href="/" class="site-header__brand">Логотип или название сайта</a>
+        <nav class="site-nav" aria-label="Основная навигация">
+            <ul class="site-nav__list">
+                <li class="site-nav__item"><a href="index.html" class="site-nav__link">Главная</a></li>
+                <li class="site-nav__item"><a href="about.html" class="site-nav__link">О нас</a></li>
+                <li class="site-nav__item"><a href="contacts.html" class="site-nav__link">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <!-- Простые "хлебные крошки" -->
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>О нас</span>
+    <main class="main">
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a href="index.html">Главная</a> - <span>О нас</span>
         </nav>
 
         <h1>О нашей компании</h1>
-        <section>
+        
+        <section class="section">
             <h2>Наша история</h2>
             <p>Текст о том, как все начиналось...</p>
         </section>
-        <section>
+        
+        <section class="section">
             <h2>Наша команда</h2>
             <p>Текст о команде...</p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Название сайта. Все права защищены.</p>
+    <footer class="site-footer">
+        <p>&copy; 2025 Название вашего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
+
+    <script src="main.js" defer></script>
 </body>
 </html>
