--- a/contacts.html
+++ b/contacts.html
@@ -3,44 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
-    <meta name="description" content="Контакты">
+    <title>Контакты - Название вашего сайта</title>
+    <meta name="description" content="Контактная информация и форма обратной связи">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <a href="/">Логотип или название сайта</a>
-        <!-- Главное меню навигации -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+    <header class="site-header">
+        <a href="/" class="site-header__brand">Логотип или название сайта</a>
+        <nav class="site-nav" aria-label="Основная навигация">
+            <ul class="site-nav__list">
+                <li class="site-nav__item"><a href="index.html" class="site-nav__link">Главная</a></li>
+                <li class="site-nav__item"><a href="about.html" class="site-nav__link">О нас</a></li>
+                <li class="site-nav__item"><a href="contacts.html" class="site-nav__link">Контакты</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <!-- Простые "хлебные крошки" -->
-        <nav aria-label="Хлебные крошки">
-            <a href="index.html">Главная</a> →
-            <span>Контакты</span>
+    <main class="main">
+        <nav class="breadcrumbs" aria-label="Хлебные крошки">
+            <a href="index.html">Главная</a> - <span>Контакты</span>
         </nav>
 
-        <h1>Способы связи</h1>
-        <section>
-            <h2>Электронная почта</h2>
-            <p>Здесь будет находится адрес электронной почты</p>
+        <h1>Контакты</h1>
+
+        <section class="section">
+            <h2>Наши контакты</h2>
+            <address>
+                <p>Адрес: г. Москва, ул. Примерная, д. 123</p>
+                <p>Телефон: +7 (123) 456-78-90</p>
+                <p>Email: info@example.com</p>
+            </address>
         </section>
-        <section>
-            <h2>Номер телефона</h2>
-            <p>Здесь будет находиться номер телефона</p>
+
+        <section class="section">
+            <h2>Форма обратной связи</h2>
+            <form class="form" id="contactPageForm">
+                <label for="contactName">Имя</label>
+                <input id="contactName" name="name" type="text" required>
+
+                <label for="contactEmail">Email</label>
+                <input id="contactEmail" name="email" type="email" required>
+
+                <label for="contactMessage">Сообщение</label>
+                <textarea id="contactMessage" name="message" rows="4" required></textarea>
+
+                <button type="submit">Отправить</button>
+            </form>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Название сайта. Все права защищены.</p>
+    <footer class="site-footer">
+        <p>&copy; 2025 Название вашего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
+
+    <script src="main.js" defer></script>
 </body>
 </html>
